syntax = "proto3";

package hedge.proto.v1;

option go_package = "github.com/flowerinthenight/hedge-cb/proto/v1";

service Hedge {
  rpc Send(stream Payload) returns (stream Payload) {}
  rpc Broadcast(stream Payload) returns (stream Payload) {}
  rpc SoSWrite(stream Payload) returns (stream Payload) {}
  rpc SoSRead(stream Payload) returns (stream Payload) {}
  rpc SoSClose(Payload) returns (Payload) {}
}

message Payload {
  map<string, string> meta = 1;
  bytes data = 2;
}
